--- a/src/app/layouts/menu/menu.component.html
+++ b/src/app/layouts/menu/menu.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="menu" data-menu="true">
+<div class="menu" data-menu="true">
   <div
     class="menu-item"
     data-menu-item-offset="20px, 10px"
@@ -40,7 +40,7 @@
       <div class="flex flex-col">
         @for (item of menuItems; track $index) {
         <div class="menu-item">
-          <button class="menu-link" [routerLink]="item.link">
+          <button class="menu-link">
             <span class="menu-icon">
               <i class="ki-filled" [ngClass]="item.icono"></i>
             </span>
@@ -52,17 +52,6 @@
       @if (menuItems.length) {
       <div class="menu-separator"></div>
       }
-      <div class="flex flex-col">
-     
-        <div class="menu-item px-4 py-1.5">
-          <button
-            class="btn btn-sm btn-light justify-center"
-            (click)="cerrarSesion()"
-          >
-            Cerrar sesión
-          </button>
-        </div>
-      </div>
     </div>
   </div>
-</div> -->
+</div>
