--- a/src/app/layouts/sidebar/sidebar.component.html
+++ b/src/app/layouts/sidebar/sidebar.component.html
@@ -1,10 +1,10 @@
 <ng-container class="h-100">
   <div
-    class="sidebar-header hidden lg:flex items-center relative justify-between px-3 lg:px-6 shrink-0"
+    class="sidebar-header hidden lg:flex items-center relative justify-between px-3 lg:px-6 shrink-0 h-100"
     id="sidebar_header"
   >
     <a class="dark:hidden" href="/">
-      <img
+      <!-- <img
         class="default-logo min-h-[22px] max-w-none"
         src="assets/media/app/default-logo.jpg"
       />
@@ -21,7 +21,7 @@
       <img
         class="small-logo min-h-[22px] max-w-none"
         src="assets/media/app/mini-logo.svg"
-      />
+      /> -->
     </a>
     <button
       class="btn btn-icon btn-icon-md size-[30px] rounded-lg border border-gray-200 dark:border-gray-300 bg-light text-gray-500 hover:text-gray-700 toggle absolute left-full top-2/4 -translate-x-2/4 -translate-y-2/4"
