--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -1,11 +1,11 @@
-<div class="h-100 flex flex-col min-h-screen"> <!-- Cambio importante aquí -->
+<div class="h-100 flex flex-col min-h-screen">
+  <!-- Cambio importante aquí -->
   <app-sidebar></app-sidebar>
   <div class="wrapper flex grow flex-col">
     <app-header></app-header>
     <main class="grow content pt-5" id="content" role="content">
       <!-- begin: container -->
-      <div class="container-fixed" id="content_container">
-      </div>
+      <div class="container-fixed" id="content_container"></div>
       <!-- end: container -->
       <!-- begin: container -->
       <div class="container-fixed">
@@ -13,7 +13,8 @@
       </div>
       <!-- end: container -->
     </main>
-    <app-footer class="mt-auto"></app-footer> <!-- Agregado mt-auto -->
+    <app-footer class="mt-auto"></app-footer>
+    <!-- Agregado mt-auto -->
   </div>
   <app-search-modal></app-search-modal>
 </div>
