--- a/src/app/common/components/ui/modals/modal-standard/modal-standard.component.html
+++ b/src/app/common/components/ui/modals/modal-standard/modal-standard.component.html
@@ -20,19 +20,22 @@
       [class]="modalSize"
     >
       <!-- Close button -->
-       <div class="modal-header">
+      <div class="modal-header">
         <h3 *ngIf="title" class="modal-title" id="modal-title">
           {{ title }}
         </h3>
-        <button class="btn btn-xs btn-icon btn-light" (click)="closeModal()" *ngIf="showCloseButton">
+        <button
+          class="btn btn-xs btn-icon btn-light"
+          (click)="closeModal()"
+          *ngIf="showCloseButton"
+        >
           <i class="ki-outline ki-cross"> </i>
         </button>
-       </div>
-       
+      </div>
+
       <!-- Modal content -->
       <div class="bg-white px-4 pb-4 pt-5 sm:p-6 sm:pb-4">
         <!-- Title -->
-        
 
         <!-- Content slot -->
         <div *ngIf="isOpen()" class="mt-2">
