--- a/src/app/layouts/header-basic/header-basic.component.html
+++ b/src/app/layouts/header-basic/header-basic.component.html
@@ -1,18 +1,12 @@
 <ng-container>
   <!-- begin: container -->
-  <div
-    class="container-fixed flex justify-between items-stretch lg:gap-4"
-    id="header_container"
-  >
+  <div class="container-fixed flex justify-between items-stretch lg:gap-4" id="header_container">
     <div class="flex gap-1 lg:hidden items-center -ml-1">
       <a class="shrink-0" href="html/demo1.html">
         <img class="max-h-[25px] w-full" src="assets/media/app/mini-logo.svg" />
       </a>
       <div class="flex items-center">
-        <button
-          class="btn btn-icon btn-light btn-clear btn-sm"
-          data-drawer-toggle="#sidebar"
-        >
+        <button class="btn btn-icon btn-light btn-clear btn-sm" data-drawer-toggle="#sidebar">
           <i class="ki-filled ki-menu"> </i>
         </button>
         <button
