--- a/src/app/layouts/sidebar/sidebar.component.html
+++ b/src/app/layouts/sidebar/sidebar.component.html
@@ -29,9 +29,7 @@
       data-toggle-class="sidebar-collapse"
       id="sidebar_toggle"
     >
-      <i
-        class="ki-filled ki-black-left-line toggle-active:rotate-180 transition-all duration-300"
-      >
+      <i class="ki-filled ki-black-left-line toggle-active:rotate-180 transition-all duration-300">
       </i>
     </button>
   </div>
@@ -55,99 +53,85 @@
         data-menu-accordion-expand-all="false"
         id="sidebar_menu"
       >
-        @for (menu of sidebarMenu; track $index) { @if (!menu.tipoAcordion) {
-        <div class="menu-item">
-          <div
-            class="menu-label gap-[10px] pl-[10px] pr-[10px] py-[6px] border border-transparent"
-            [routerLink]="menu.link"
-            routerLinkActive="bg-slate-100 text-white rounded-lg"
-            tabindex="0"
-          >
-            <span
-              class="menu-icon items-start w-[20px] text-gray-500 dark:text-gray-400"
-            >
-              <i
-                [class]="menu.iconoClase + ' text-lg '"
-                routerLinkActive="text-primary"
-              ></i>
-            </span>
-            <span
-              routerLinkActive="text-primary font-semibold before:bg-primary"
-              class="menu-title text-sm font-semibold"
-              [ngClass]="{
-                'rounded-lg': isActive(menu.link),
-                'text-gray-700': !isActive(menu.link)
-              }"
-            >
-              {{ menu.nombre }}
-            </span>
-          </div>
-        </div>
-        } @else {
-        <div
-          class="menu-item"
-          data-menu-item-toggle="accordion"
-          data-menu-item-trigger="click"
-        >
-          <div
-            class="menu-link flex items-center grow cursor-pointer border border-transparent gap-[10px] pl-[10px] pr-[10px] py-[6px]"
-            tabindex="0"
-          >
-            <span
-              class="menu-icon items-start text-gray-500 dark:text-gray-400 w-[20px]"
-            >
-              <i [class]="menu.iconoClase + ' text-lg'"></i>
-            </span>
-            <span
-              class="menu-title text-sm  text-gray-700 menu-item-active:text-primary menu-link-hover:!text-primary"
-            >
-              {{ menu.nombre }}
-            </span>
-            <span
-              class="menu-arrow text-gray-400 w-[20px] shrink-0 justify-end ml-1 mr-[-10px]"
-            >
-              <i class="ki-filled ki-plus text-2xs menu-item-show:hidden"> </i>
-              <i
-                class="ki-filled ki-minus text-2xs hidden menu-item-show:inline-flex"
-              >
-              </i>
-            </span>
-          </div>
-          <div
-            class="menu-accordion gap-0.5 pl-[10px] relative before:absolute before:left-[20px] before:top-0 before:bottom-0 before:border-l before:border-gray-200"
-          >
-            @for (subMenu of menu?.children; track $index) {
+        @for (menu of sidebarMenu; track $index) {
+          @if (!menu.tipoAcordion) {
             <div class="menu-item">
-              <a
-                class="menu-link gap-[14px] pl-[10px] pr-[10px] py-[8px] border border-transparent items-center grow dark:menu-item-active:bg-coal-300 dark:menu-item-active:border-gray-100 dark:hover:bg-coal-300 dark:hover:border-gray-100 hover:rounded-lg"
-                [routerLink]="subMenu.link"
-                [ngClass]="{
-                  'bg-secondary-active rounded-lg': isActive(subMenu.link),
-                  'text-gray-700': !isActive(subMenu.link)
-                }"
+              <div
+                class="menu-label gap-[10px] pl-[10px] pr-[10px] py-[6px] border border-transparent"
+                [routerLink]="menu.link"
+                routerLinkActive="bg-slate-100 text-white rounded-lg"
                 tabindex="0"
               >
-                <span
-                  class="menu-bullet flex w-[6px] relative before:absolute before:top-0 before:size-[6px] before:rounded-full before:-translate-x-1/2 before:-translate-y-1/2 menu-item-hover:before:bg-primary"
-                >
+                <span class="menu-icon items-start w-[20px] text-gray-500 dark:text-gray-400">
+                  <i [class]="menu.iconoClase + ' text-lg '" routerLinkActive="text-primary"></i>
                 </span>
                 <span
-                  class="menu-title text-2sm font-medium menu-item-active: menu-link-hover:!text-primary"
+                  routerLinkActive="text-primary font-semibold before:bg-primary"
+                  class="menu-title text-sm font-semibold"
                   [ngClass]="{
-                    'text-primary font-semibold before:bg-primary': isActive(
-                      subMenu.link
-                    ),
-                    'text-gray-700': !isActive(subMenu.link)
+                    'rounded-lg': isActive(menu.link),
+                    'text-gray-700': !isActive(menu.link),
                   }"
                 >
-                  {{ subMenu.nombre }}
+                  {{ menu.nombre }}
                 </span>
-              </a>
+              </div>
             </div>
-            }
-          </div>
-        </div>
-        } }
+          } @else {
+            <div class="menu-item" data-menu-item-toggle="accordion" data-menu-item-trigger="click">
+              <div
+                class="menu-link flex items-center grow cursor-pointer border border-transparent gap-[10px] pl-[10px] pr-[10px] py-[6px]"
+                tabindex="0"
+              >
+                <span class="menu-icon items-start text-gray-500 dark:text-gray-400 w-[20px]">
+                  <i [class]="menu.iconoClase + ' text-lg'"></i>
+                </span>
+                <span
+                  class="menu-title text-sm text-gray-700 menu-item-active:text-primary menu-link-hover:!text-primary"
+                >
+                  {{ menu.nombre }}
+                </span>
+                <span
+                  class="menu-arrow text-gray-400 w-[20px] shrink-0 justify-end ml-1 mr-[-10px]"
+                >
+                  <i class="ki-filled ki-plus text-2xs menu-item-show:hidden"> </i>
+                  <i class="ki-filled ki-minus text-2xs hidden menu-item-show:inline-flex"> </i>
+                </span>
+              </div>
+              <div
+                class="menu-accordion gap-0.5 pl-[10px] relative before:absolute before:left-[20px] before:top-0 before:bottom-0 before:border-l before:border-gray-200"
+              >
+                @for (subMenu of menu?.children; track $index) {
+                  <div class="menu-item">
+                    <a
+                      class="menu-link gap-[14px] pl-[10px] pr-[10px] py-[8px] border border-transparent items-center grow dark:menu-item-active:bg-coal-300 dark:menu-item-active:border-gray-100 dark:hover:bg-coal-300 dark:hover:border-gray-100 hover:rounded-lg"
+                      [routerLink]="subMenu.link"
+                      [ngClass]="{
+                        'bg-secondary-active rounded-lg': isActive(subMenu.link),
+                        'text-gray-700': !isActive(subMenu.link),
+                      }"
+                      tabindex="0"
+                    >
+                      <span
+                        class="menu-bullet flex w-[6px] relative before:absolute before:top-0 before:size-[6px] before:rounded-full before:-translate-x-1/2 before:-translate-y-1/2 menu-item-hover:before:bg-primary"
+                      >
+                      </span>
+                      <span
+                        class="menu-title text-2sm font-medium menu-item-active: menu-link-hover:!text-primary"
+                        [ngClass]="{
+                          'text-primary font-semibold before:bg-primary': isActive(subMenu.link),
+                          'text-gray-700': !isActive(subMenu.link),
+                        }"
+                      >
+                        {{ subMenu.nombre }}
+                      </span>
+                    </a>
+                  </div>
+                }
+              </div>
+            </div>
+          }
+        }
       </div>
     </div>
   </div>
