--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -2,19 +2,11 @@
   class="flex h-[100vh] justify-center items-center p-8 lg:p-10 order-2 lg:order-1 login-container"
 >
   <div class="card max-w-[400px] w-full">
-    <form
-      class="card-body flex flex-col gap-5 p-10"
-      id="sign_in_form"
-      method="get"
-    >
+    <form class="card-body flex flex-col gap-5 p-10" id="sign_in_form" method="get">
       <div class="text-center mb-2.5">
-        <h3 class="text-lg font-medium text-gray-900 leading-none mb-2.5">
-          Ingresar
-        </h3>
+        <h3 class="text-lg font-medium text-gray-900 leading-none mb-2.5">Ingresar</h3>
         <div class="flex items-center justify-center">
-          <span class="text-2sm text-gray-700 me-1.5">
-            ¿Necesitas una cuenta?
-          </span>
+          <span class="text-2sm text-gray-700 me-1.5"> ¿Necesitas una cuenta? </span>
           <a class="text-2sm link" routerLink="/auth/register"> Registrarse </a>
         </div>
       </div>
@@ -33,12 +25,7 @@
       </div>
 
       <label class="checkbox-group">
-        <input
-          class="checkbox checkbox-sm"
-          name="check"
-          type="checkbox"
-          value="1"
-        />
+        <input class="checkbox checkbox-sm" name="check" type="checkbox" value="1" />
         <span class="checkbox-label"> Recuerdame </span>
       </label>
 
