--- a/src/app/modules/auth/pages/register/register.component.html
+++ b/src/app/modules/auth/pages/register/register.component.html
@@ -1,44 +1,57 @@
-<!-- <div
-  class="flex h-[100vh] justify-center items-center p-8 lg:p-10 order-2 lg:order-1"
->
+<div class="flex h-[100vh] justify-center items-center p-8 lg:p-10 order-2 lg:order-1">
   <div class="card max-w-[400px] w-full">
     <form
-      [formGroup]="formulario"
+      [formGroup]="formularioRegister"
       class="card-body flex flex-col gap-5 p-10"
       id="sign_up_form"
       method="post"
-      (submit)="enviar()"
     >
       <div class="text-center mb-2.5">
-        <h3 class="text-lg font-medium text-gray-900 leading-none mb-2.5">
-          Registrarse
-        </h3>
+        <h3 class="text-lg font-medium text-gray-900 leading-none mb-2.5">Registrarse</h3>
         <div class="flex items-center justify-center">
-          <span class="text-2sm text-gray-700 me-1.5">
-            ¿Ya tiene una cuenta?
-          </span>
+          <span class="text-2sm text-gray-700 me-1.5"> ¿Ya tiene una cuenta? </span>
           <a class="text-2sm link" routerLink="/auth/login"> Iniciar sesión </a>
         </div>
       </div>
       <div class="flex flex-col gap-1">
         <label class="form-label text-gray-900"> Email </label>
-        <app-input-email
-          [control]="formulario.controls.username"
-        ></app-input-email>
+        <app-input
+          placeholder="Ingresa tu correo"
+          formControlName="username"
+          [invalid]="formularioRegister.get('username')?.invalid"
+          [dirty]="formularioRegister.get('username')?.dirty"
+          [touched]="formularioRegister.get('username')?.touched"
+          [errors]="{
+            required: 'El correo es requerido.',
+            email: 'Ingresa un correo válido.',
+          }"
+        ></app-input>
       </div>
       <div class="flex flex-col gap-1">
         <label class="form-label font-normal text-gray-900"> Contraseña </label>
-        <app-input-password
-          [control]="formulario.controls.password"
-        ></app-input-password>
+        <app-input
+          placeholder="Ingresa tu contraseña"
+          formControlName="password"
+          [invalid]="formularioRegister.get('password')?.invalid"
+          [dirty]="formularioRegister.get('password')?.dirty"
+          [touched]="formularioRegister.get('password')?.touched"
+          [errors]="{
+            required: 'La contraseña es requerida.',
+          }"
+        ></app-input>
       </div>
       <div class="flex flex-col gap-1">
-        <label class="form-label font-normal text-gray-900">
-          Confirmar contraseña
-        </label>
-        <app-input-password
-          [control]="formulario.controls.confirmarContrasena"
-        ></app-input-password>
+        <label class="form-label font-normal text-gray-900"> Confirmar contraseña </label>
+        <app-input
+          placeholder="Ingresa tu contraseña"
+          formControlName="confirmarContrasena"
+          [invalid]="formularioRegister.get('confirmarContrasena')?.invalid"
+          [dirty]="formularioRegister.get('confirmarContrasena')?.dirty"
+          [touched]="formularioRegister.get('confirmarContrasena')?.touched"
+          [errors]="{
+            required: 'La contraseña es requerida.',
+          }"
+        ></app-input>
       </div>
       <label class="checkbox-group">
         <input
@@ -52,24 +65,30 @@
           Acepto
           <a routerLink="/terminos_de_uso" class="text-2sm link" target="_blank"> Terminos </a>
           &
-          <a routerLink="/politicas_privacidad" class="text-2sm link" target="_blank"> Condiciones </a>
+          <a routerLink="/politicas_privacidad" class="text-2sm link" target="_blank">
+            Condiciones
+          </a>
         </span>
       </label>
 
-      @if(isProduction) {
-      <ngx-turnstile
-        [siteKey]="turnstileSiteKey"
-        (resolved)="onTurnstileSuccess($event)"
-      ></ngx-turnstile>
-      }
+      <!-- @if (isProduction) {
+        <ngx-turnstile
+          [siteKey]="turnstileSiteKey"
+          (resolved)="onTurnstileSuccess($event)"
+        ></ngx-turnstile>
+      } -->
 
-      <app-button
-        [texto]="'Crear cuenta'"
-        [textoCargando]="'Creando...'"
-        [estaCargando]="registrando$ | async"
-        [clases]="'btn btn-primary w-full text-center justify-center'"
-        [estaDeshabilitado]="!this.formulario.valid"
-      ></app-button>
+      <app-advanced-button
+        [text]="'Crear cuenta'"
+        [loadingText]="'Creando...'"
+        [type]="'button'"
+        [color]="'primary'"
+        [size]="'md'"
+        [classes]="'btn btn-primary w-full text-center justify-center'"
+        [isLoading]="registrando()"
+        [isDisabled]="!this.formularioRegister.valid"
+        (buttonClick)="register()"
+      ></app-advanced-button>
     </form>
   </div>
-</div> -->
+</div>
