--- a/src/app/layouts/menu/menu.component.html
+++ b/src/app/layouts/menu/menu.component.html
@@ -40,6 +40,13 @@
       @if (menuItems.length) {
         <div class="menu-separator"></div>
       }
+      <div class="flex flex-col">
+        <div class="menu-item px-4 py-1.5">
+          <button class="btn btn-sm btn-light justify-center" (click)="cerrarSesion()">
+            Cerrar sesión
+          </button>
+        </div>
+      </div>
     </div>
   </div>
 </div>
