--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -21,9 +21,7 @@
         <app-input
           placeholder="Ingresa tu correo"
           formControlName="username"
-          [invalid]="formularioLogin.get('username')?.invalid"
-          [dirty]="formularioLogin.get('username')?.dirty"
-          [touched]="formularioLogin.get('username')?.touched"
+          [control]="formularioLogin.get('username')"
           [errors]="{
             required: 'El correo es requerido.',
             email: 'Ingresa un correo válido.',
@@ -35,10 +33,9 @@
         <app-label> Contraseña </app-label>
         <app-input
           placeholder="Ingresa tu contraseña"
+          type="password"
           formControlName="password"
-          [invalid]="formularioLogin.get('password')?.invalid"
-          [dirty]="formularioLogin.get('password')?.dirty"
-          [touched]="formularioLogin.get('password')?.touched"
+          [control]="formularioLogin.get('password')"
           [errors]="{
             required: 'La contraseña es requerida.',
           }"
