--- a/src/app/modules/auth/pages/register/register.component.html
+++ b/src/app/modules/auth/pages/register/register.component.html
@@ -18,9 +18,7 @@
         <app-input
           placeholder="Ingresa tu correo"
           formControlName="username"
-          [invalid]="formularioRegister.get('username')?.invalid"
-          [dirty]="formularioRegister.get('username')?.dirty"
-          [touched]="formularioRegister.get('username')?.touched"
+          [control]="formularioRegister.get('username')"
           [errors]="{
             required: 'El correo es requerido.',
             email: 'Ingresa un correo válido.',
@@ -31,12 +29,12 @@
         <label class="form-label font-normal text-gray-900"> Contraseña </label>
         <app-input
           placeholder="Ingresa tu contraseña"
+          type="password"
           formControlName="password"
-          [invalid]="formularioRegister.get('password')?.invalid"
-          [dirty]="formularioRegister.get('password')?.dirty"
-          [touched]="formularioRegister.get('password')?.touched"
+          [control]="formularioRegister.get('password')"
           [errors]="{
             required: 'La contraseña es requerida.',
+            minlength: 'La contraseña debe tener al menos 3 caracteres.',
           }"
         ></app-input>
       </div>
@@ -44,12 +42,12 @@
         <label class="form-label font-normal text-gray-900"> Confirmar contraseña </label>
         <app-input
           placeholder="Ingresa tu contraseña"
+          type="password"
           formControlName="confirmarContrasena"
-          [invalid]="formularioRegister.get('confirmarContrasena')?.invalid"
-          [dirty]="formularioRegister.get('confirmarContrasena')?.dirty"
-          [touched]="formularioRegister.get('confirmarContrasena')?.touched"
+          [control]="formularioRegister.get('confirmarContrasena')"
           [errors]="{
             required: 'La contraseña es requerida.',
+            notMatching: 'Las contraseñas no coinciden.',
           }"
         ></app-input>
       </div>
