refactor: cambio de input types

--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -32,7 +32,7 @@
       <div class="flex flex-col gap-1">
         <app-label> Contraseña </app-label>
         <app-input
-          placeholder="Ingresa tu contraseña"
+          placeholder="**********"
           type="password"
           formControlName="password"
           [control]="formularioLogin.get('password')"
