--- a/src/app/modules/auth/pages/register/register.component.html
+++ b/src/app/modules/auth/pages/register/register.component.html
@@ -28,7 +28,7 @@
       <div class="flex flex-col gap-1">
         <label class="form-label font-normal text-gray-900"> Contraseña </label>
         <app-input
-          placeholder="Ingresa tu contraseña"
+          placeholder="**********"
           type="password"
           formControlName="password"
           [control]="formularioRegister.get('password')"
@@ -41,7 +41,7 @@
       <div class="flex flex-col gap-1">
         <label class="form-label font-normal text-gray-900"> Confirmar contraseña </label>
         <app-input
-          placeholder="Ingresa tu contraseña"
+          placeholder="**********"
           type="password"
           formControlName="confirmarContrasena"
           [control]="formularioRegister.get('confirmarContrasena')"
